2020-03-05 17:48 +0000  Asterisk Development Team <asteriskteam@digium.com>

	* asterisk 17.3.0-rc1 Released.

2020-03-05 11:23 +0000 [1d3256c5e4]  Asterisk Development Team <asteriskteam@digium.com>

	* Update CHANGES and UPGRADE.txt for 17.3.0
2020-03-03 10:57 +0000 [88393db74d]  lvl <digium@lvlconsultancy.nl>

	* res_pjsip_refer: ensure refer progress is still sent after Proceeding()

	  ASTERISK-28766 #close

	  Change-Id: I5ce2210062f9325db762edbf6e46075079bb2cd1

2020-01-12 05:37 +0000 [61f943d405]  Sebastian Kemper <sebastian_ml@gmx.net>

	* check_expr2: fix cross-compile/hardening issues

	  When building check_expr2 with ASLR PIE hardening enabled the linker
	  fails. This is resolved by adding the regular compiler flags when
	  building the object files from ast_expr2f.c and ast_expr2.c.

	  Note: The STANDALONE define is removed because it is already defined in
	  _ASTCFLAGS. YY_NO_INPUT is defined so that the compile survives
	  '--enable-dev-mode'.

	  Also, a Makefile variable "CROSS_COMPILING" is added so that the
	  build system doesn't try to run check_expr2 when cross-compiling,
	  because that will fail the build as will.

	  ASTERISK-28685 #close

	  Signed-off-by: Sebastian Kemper <sebastian_ml@gmx.net>
	  Change-Id: If435b7db9f9ad8266245bda51c81c220f9658915

2020-02-20 11:33 +0000 [029c3e49d4]  Joshua C. Colp <jcolp@sangoma.com>

	* res_rtp_asterisk: Improve video performance in certain networks.

	  The receive buffer will now grow if we end up flushing the
	  receive queue after not receiving the expected packet in time.
	  This is done in hopes that if this is encountered again the
	  extra buffer size will allow more time to pass and any missing
	  packets to be received.

	  The send buffer will now grow if we are asked for packets and
	  can't find them. This is done in hopes that the packets are
	  from the past and have simply been expired. If so then in
	  the future with the extra buffer space the packets should be
	  available.
