@@ -1,3 +1,7 @@
+2020-03-12 14:48 +0000  Asterisk Development Team <asteriskteam@digium.com>
+
+	* asterisk 17.3.0 Released.
+
 2020-03-05 17:48 +0000  Asterisk Development Team <asteriskteam@digium.com>
 
 	* asterisk 17.3.0-rc1 Released.
